<!--
  * Kidzz
  * https://github.com/quintuslabs/Kidzz
  * Created on 25-feb-2019.
  * Created by : Santosh Kumar Dash:- http://santoshdash.epizy.com
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_10dp"
        android:padding="@dimen/layout_margin_10dp"
        app:cardCornerRadius="@dimen/layout_margin_10dp"
        app:cardElevation="@dimen/layout_margin_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/layout_margin_10dp"
                    android:background="@drawable/ic_front_store" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_15dp"
                    android:text="@string/store_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin_1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/layout_margin_10dp"
                    android:background="@drawable/ic_place_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_15dp"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin_1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/about_us_website_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/layout_margin_10dp"
                    android:background="@drawable/ic_language_black_24dp" />

                <TextView
                    android:id="@+id/about_us_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_15dp"
                    android:text="@string/website"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin_1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/about_us_email_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/layout_margin_10dp"
                    android:background="@drawable/ic_email_black_24dp" />

                <TextView
                    android:id="@+id/about_us_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_15dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin_1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/about_us_phono_no_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/layout_margin_10dp"
                    android:background="@drawable/ic_phone_in_talk_black_24dp" />

                <TextView
                    android:id="@+id/about_us_phone_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_15dp"
                    android:text="@string/phone_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_18dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin_1dp"
                android:background="@color/colorPrimary" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
